# musicFPaugment

./: .gitignore  LICENSE.md  README.md  pyproject.toml
afp/audfprint/: audfprint_match.py  hash_table.py  peak_extractor.py  stft.py
afp/dejavu/: database.py  dejavu.py  file_recognizer.py  fingerprint.py  postgres_database.py  variables.py
augmentation/: __init__.py  composition.py  constants.py  transform.py  utils.py
augmentation/transformations/: background_noise.py  band_filters.py  clipping.py  colored_noise.py  gain.py  impulse_response.py  pass_filters.py  peak_normalization.py
docker/install/: .env  docker-compose.yaml
docker/python/: Dockerfile
streamlit_app/: app.py
testing/: audfprint_exps.py  dejavu_exps.py  fma_preprocessing.py  generate_queries.py  metrics.py  parameters.py
testing/dataset/: fma_large_to_remove.txt
training/: background_noise.py  callbacks.py  dataset.py  generate_audios.py  jamendo.py  loss.py  model.py  parameters.py  train.py  unet.py  utils.py  visualisation.py
